kustomize/environments/prod/schemaregistry-bootstrap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: schemaregistry
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: schemaregistry
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: schemaregistry-bootstrap
  labels:
    confluent-platform: "true"
    cr-name: schemaregistry
    type: schemaregistry
spec:
  ports:
    - name: external
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: schemaregistry
    clusterId: confluent 
    confluent-platform: "true"
    type: schemaregistry
  sessionAffinity: None
  type: ClusterIP
