kustomize/environments/prod/c3-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress 
metadata: 
 name: c3-ingress
